<resources>
    <string name="app_name">JDShop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="catagory">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="title_activity_ware_detail">WareDetailActivity</string>
    <string name="share">分享</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_info">个人资料</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的消息</string>
    <string name="logout">退出登录</string>
    <string name="to_login">点击登录</string>
    <string name="token_error">登录失效，请重新登录</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="hint_password">请输入登录密码</string>
    <string name="hint_iphone">请输入手机号码</string>
    <string name="btn_login">登 录</string>
    <string name="txt_toReg">注册账号</string>
    <string name="txt_forgetPass">忘记密码</string>
    <string name="create_order">填写订单</string>

    <string name="btn_delete">删除</string>
    <string name="txt_total">合计</string>
    <string name="txt_selectAll">全选</string>

    <string name="btn_goPrice">去结算</string>

    <string name="pay_result">支付结果</string>

    <string name="smssdk_resend_identify_code">重新获取验证码</string>

    <string name="add_addresses">新建收件地址</string>

</resources>
