<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">


    <com.example.duxiaoming.jdshop.widget.JDToolBar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_back"
        app:title="菜鸟登录        " />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_view_block"
        android:orientation="vertical"
        android:padding="@dimen/largePadding">


        <com.example.duxiaoming.jdshop.widget.ClearEditText
            android:id="@+id/etxt_phone"
            style="@style/editText_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_telphone_32"
            android:drawablePadding="20dp"
            android:hint="@string/hint_iphone"
            android:inputType="phone" />

        <View style="@style/line_vertical" />


        <com.example.duxiaoming.jdshop.widget.ClearEditText
            android:id="@+id/etxt_pwd"
            style="@style/editText_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="20dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        style="@style/bigRedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_login" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/largePadding">

        <TextView
            android:id="@+id/txt_toReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_toReg"
            android:textColor="@color/blue"
            android:textSize="12sp"


            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/txt_forgetPass"
            android:textColor="@color/blue"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>