<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y500"
        android:background="?attr/colorPrimary">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_head"
            android:layout_width="@dimen/x300"
            android:layout_height="@dimen/y300"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y30"
            android:src="@drawable/default_head"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="@dimen/y5">


        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginTop="@dimen/y150"
            android:gravity="center"
            android:text="@string/to_login"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_my_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_list_o"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_orders"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_favorite"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_favorite"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_location"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_addresses"
                android:textColor="@color/black" />

            <View style="@style/line_vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_msg"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_msg"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/btn_logout"
                style="@style/bigRedButton"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/logout"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>